# chess.com

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  bandit.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  upload.sh
.github/: dependabot.yml
.github/workflows/: build_and_publish.yml  publish.yml  python-package.yml  python-publish.yml  readthedocs.yml  smoke_tests.yml  test.yml
chess.com.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chessdotcom/: __init__.py  aio.py  async.py  caller.py  client.py  endpoints.py  errors.py  response.py  response_builder.py  response_parser.py  test.py  types.py  utils.py
chessdotcom/_endpoints/: __init__.py  get_player_profile.py
chessdotcom/endpoints/: __init__.py  club_details.py  club_matches.py  club_members.py  country_clubs.py  country_details.py  country_players.py  current_daily_puzzle.py  leaderboards.py  player_clubs.py  player_current_games.py  player_current_games_to_move.py  player_game_archives.py  player_games_by_basetime_increment.py  player_games_by_month.py  player_games_by_month_pgn.py  player_is_online.py  player_online.py  player_profile.py  player_stats.py  player_team_matches.py  player_tournaments.py  random_daily_puzzle.py  steamers.py  streamers.py  team_match.py  team_match_board.py  team_match_live.py  team_match_live_board.py  titled_players.py  tournament_details.py  tournament_round.py  tournament_round_group_details.py
docs/: conf.py  index.rst
docs/members/: chessdotcom.client.rst  chessdotcom.endpoints.club_details.rst  chessdotcom.endpoints.club_matches.rst  chessdotcom.endpoints.club_members.rst  chessdotcom.endpoints.country_clubs.rst  chessdotcom.endpoints.country_details.rst  chessdotcom.endpoints.country_players.rst  chessdotcom.endpoints.current_daily_puzzle.rst  chessdotcom.endpoints.leaderboards.rst  chessdotcom.endpoints.player_clubs.rst  chessdotcom.endpoints.player_current_games.rst  chessdotcom.endpoints.player_current_games_to_move.rst  chessdotcom.endpoints.player_game_archives.rst  chessdotcom.endpoints.player_games_by_basetime_increment.rst  chessdotcom.endpoints.player_games_by_month.rst  chessdotcom.endpoints.player_games_by_month_pgn.rst  chessdotcom.endpoints.player_profile.rst  chessdotcom.endpoints.player_stats.rst  chessdotcom.endpoints.rst  (+12 more)
tests/: __init__.py  api_smoke_test.py  async_test.py  client_test.py  conftest.py  date_resolution_test.py  endpoint_smoke_test.py  endpoint_test.py  endpoints_test.py  package_import_test.py  test_date_resolution.py  test_endpoints.py  test_rate_limit_handler.py  utils_test.py  vcr.py
(+104 files in other folders)
